# CGALUnwrapper

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.py
CGALMethods/: CGALMethods.cp37-win_amd64.pyd  CGALMethods.exp  CGALMethods.lib  __init__.py
CGALMethods.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: 1_quickstart.html  2_examples.html  index.html  objects.inv  searchindex.js  typedefs.html
docs/_sources/: 1_quickstart.rst.txt  3_cmake.rst.txt
docs/_sources/examples_cpp/: parameterization.rst.txt
docs/_sources/examples_python/: calculating_surface_curvature.rst.txt  unwrapping_a_cylindrical_surface_mesh.rst.txt
docs/examples_cpp/: boundary_detection.html  convert_property_to_buffer.html  curvature.html  dijkstra_shortest_paths.html  heat_method.html  parameterization.html
docs/examples_python/: calculating_surface_curvature.html  getting_points_and_properties.html  mapping_a_parameterized_mesh_to_grid.html  python_read_vtk.html  unwrapping_a_cylindrical_surface_mesh.html  unwrapping_many_cylindrical_meshes_with_multiprocessing.html
include/CGALMethods/: boundary.hpp  property_buffer_vertices.hpp  types.hpp  utils.hpp
include/CGALMethods/IO/: from_structured_buffer.hpp  io.hpp  vtk.hpp
include/CGALMethods/bound/: surface_mesh.hpp
include/CGALMethods/localDifferentiableProperties/: curvature.hpp
include/CGALMethods/parameterization/: cylinder_utilities.hpp  cylindrical_mesh_unwrapper.hpp  parameterization.hpp
include/CGALMethods/shortestpaths/: .dijkstras_shortest_path.hpp.un~  dijkstras_shortest_path.hpp  dijkstras_shortest_path.hpp~  heatmethod.hpp
resources/: Inlet_Bifurcation_original.vtk  Outlet_Bifurcation_original.vtk
source/: main.cpp
sphinx/: 2_examples.rst  conf.py  stub
sphinx/.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
sphinx/_build/doctrees/: 1_quickstart.doctree  2_examples.doctree  3_cmake.doctree  environment.pickle  index.doctree  typedefs.doctree
sphinx/_build/html/: .buildinfo  1_quickstart.html  2_examples.html  3_cmake.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  typedefs.html
sphinx/examples_cpp/: convert_property_to_buffer.rst
sphinx/examples_python/: getting_points_and_properties.rst  mapping_a_parameterized_mesh_to_grid.rst  python_read_vtk.rst  unwrapping_a_cylindrical_surface_mesh.rst
tests_cpp/: boundary.cpp  curvature.cpp  dijkstra.cpp  heat_method.cpp  parameterization.cpp  property_buffer.cpp  read_write_vtk.cpp
tests_python/: README.md  accessing_points_and_properties.py  calculate_curvature.py  config.py  config2.py  map_parameterized_mesh_to_grid.py  read_write_vtk.py  unwrap_artery.py  unwrap_many.py  uwrap_artery_without_wss.py
tests_python/CGALMethods/: CGALMethods.cp37-win_amd64.pyd  map_to_grid.py
unwrapperEnv/Scripts/: Activate.ps1  activate  activate.bat  mypyc  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstcheck-script.py  rstpep2html.py
(+50 files in other folders)
